k8s/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: userwebapi-gateway
  namespace: userwebapi
spec:
  selector:
    istio: ingressgateway  
  servers:
  - port:
      number: 80
      name: http 
      protocol: HTTP
    hosts:
    - "*"
